clean up and fix home page header and footer

--- a/src/plonefr.theme/src/plonefr/theme/static/index.html
+++ b/src/plonefr.theme/src/plonefr/theme/static/index.html
@@ -34,16 +34,6 @@
   </head>
 
   <body class="diazo-index">
-  
-  <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MXV28S"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MXV28S');</script>
-<!-- End Google Tag Manager -->
 
     <div id="portal-top" class="row">
         <div class="cell width-full position-0">
@@ -68,7 +58,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div> <!-- end #portal-top -->
 
 
-    <div id="above-portal-content" class="row"></div>
+    <div id="above-portal-content" class="row">
+        <div id="#home-header">
+            <div class="carousel">
+                <div class="carousel-banner carousel-banner-active">
+                    <div class="carousel-text">
+                        <h1 class="carousel-title">Plone 5</h1>
+                        <div class="carousel-body center">
+                            <h2>Le CMS opensource d'entreprise<br/>par excellence</h2>
+                            <p class="center">
+                                <a title="" href="./5" class="carousel-readmore" target="_self">Tout savoir sur Plone 5</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <div id="portal-content" class="row">
@@ -93,7 +99,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
     <div id="below-portal-content" class="row"></div>
-    <div id="footer" class="row"></div>
+        <div id="portal-footer">
+            <div id="portal-footer-bottom" class="row">
+                 <div class="cell width-full position-0">
+                      <div class="centered"></div>
+                 </div>
+            </div>
+        </div>
+    </div>
 
     <div id="footer-js"></div>
   </body>
