add jbot + custom footer

--- a/src/plonefr.theme/src/plonefr/theme/static/content.html
+++ b/src/plonefr.theme/src/plonefr/theme/static/content.html
@@ -92,7 +92,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
     </div> <!-- end #portal-content -->
     <div id="below-portal-content" class="row"></div>
-    <div id="footer" class="row"></div>
+        <div id="portal-footer">
+            <div id="portal-footer-bottom" class="row">
+                 <div class="cell width-full position-0">
+                      <div class="centered"></div>
+                 </div>
+            </div>
+        </div>
+    </div>
 
     <div id="footer-js"></div>
   </body>
