fix link to plone5 page

--- a/src/plonefr.theme/src/plonefr/theme/static/home.html
+++ b/src/plonefr.theme/src/plonefr/theme/static/home.html
@@ -67,7 +67,7 @@
                         <div class="carousel-body center">
                             <h2>Le CMS opensource d'entreprise<br/>par excellence</h2>
                             <p class="center">
-                                <a title="" href="./5" class="carousel-readmore" target="_self">Tout savoir sur Plone 5</a>
+                                <a title="" href="/5" class="carousel-readmore" target="_self">Tout savoir sur Plone 5</a>
                             </p>
                         </div>
                     </div>
