--- a/src/plonefr.theme/src/plonefr/theme/static/content.html
+++ b/src/plonefr.theme/src/plonefr/theme/static/content.html
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 
                 <div class="searchysearch"></div>
                 <a id="portal-logo" href="http://plone.rebelx.nl/">
-                    <img src="static/images/logo.png" alt="Plone - The Ultimate Open Source Enterprise CMS" title="Plone - The Ultimate Open Source Enterprise CMS">
+                    <img src="static/images/logo.png" alt="Plone - Le CMS opensource d'entreprise par excellence" title="Plone - Le CMS opensource d'entreprise par excellence">
                 </a>
 
                 <div class="nav-primary">
