--- a/src/plonefr.theme/src/plonefr/theme/static/home.html
+++ b/src/plonefr.theme/src/plonefr/theme/static/home.html
@@ -43,7 +43,7 @@
                 
                 <div class="searchysearch"></div>
                 <a id="portal-logo" href="http://plone.rebelx.nl/">
-                    <img src="static/images/logo-home.png" alt="Plone - The Ultimate Open Source Enterprise CMS" title="Plone - The Ultimate Open Source Enterprise CMS">
+                    <img src="static/images/logo.png" alt="Plone - Le CMS opensource d'entreprise par excellence" title="Plone - Le CMS opensource d'entreprise par excellence">
                 </a>
 
                 <div class="nav-primary">
